--- a/project_list.html
+++ b/project_list.html
@@ -5,43 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>후원하기 — Project.PAW</title>
   <style>
-    :root{--primary:#1f6feb;--muted:#9aa8c7;--bg:#0a0f1d;--card:#0f1629;--line:#1a2342;--radius:16px}
-    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:#e6ecff;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
+    :root{--primary:#1f6feb;--muted:#64748b;--bg:#f8fafc;--card:#ffffff;--line:#e5e7eb;--radius:16px}
+    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:#0f172a;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
     a{text-decoration:none;color:inherit}
     .clamp-1{display:-webkit-box;-webkit-line-clamp:1;-webkit-box-orient:vertical;overflow:hidden}
     .clamp-2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
 
     .container{max-width:1120px;margin:0 auto;padding:0 14px}
-    .topbar{position:sticky;top:0;z-index:10;background:#0b1222;border-bottom:1px solid var(--line)}
+    .topbar{position:sticky;top:0;z-index:10;background:#ffffffcc;border-bottom:1px solid var(--line);backdrop-filter:blur(6px)}
     .topbar .inner{display:flex;align-items:center;justify-content:space-between;padding:10px 14px}
     .brand{font-weight:900}.nav{display:flex;gap:8px}
-    .btn{appearance:none;border:0;border-radius:10px;padding:9px 12px;font-weight:700;cursor:pointer}
-    .btn.ghost{background:#ffffff12}.btn.primary{background:var(--primary);color:#fff}
+    .btn{appearance:none;border:1px solid var(--line);border-radius:10px;padding:9px 12px;font-weight:700;cursor:pointer;background:#fff}
+    .btn.primary{background:var(--primary);color:#fff;border-color:transparent}
 
     .section{padding:22px 0}
-    .kicker{font-size:11px;letter-spacing:.12em;text-transform:uppercase;color:#90a0c0;font-weight:800}
+    .kicker{font-size:11px;letter-spacing:.12em;text-transform:uppercase;color:#475569;font-weight:800}
     h1{margin:0 0 6px 0;font-size:clamp(20px,3.2vw,26px);font-weight:900}
     .controls{display:flex;gap:8px;align-items:center}
-    select,input[type="checkbox"]{padding:8px 10px;border:1px solid #243056;border-radius:10px;background:#0c1326;color:#e6ecff}
+    select,input[type="checkbox"]{padding:8px 10px;border:1px solid var(--line);border-radius:10px;background:#fff}
 
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,1fr));gap:12px}
-    .card{background:linear-gradient(180deg,#0f1629,#0d1527);border:1px solid #1b2547;border-radius:16px;overflow:hidden;transition:transform .12s}
-    .card:hover{transform:translateY(-2px)}
-    .media{position:relative;background:#0a1020;border-bottom:1px solid #1b2547}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:16px;overflow:hidden;transition:transform .12s}
+    .card:hover{transform:translateY(-2px);box-shadow:0 10px 24px rgba(16,24,40,.08)}
+    .media{position:relative;background:#eef2ff;border-bottom:1px solid var(--line)}
     .media::before{content:"";display:block;padding-top:75%} /* 4:3 */
     .media > img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center 38%}
     .pad{padding:12px}
-    .muted{color:#9aa8c7}
+    .muted{color:var(--muted)}
     .badge{font-size:11px;padding:3px 7px;border-radius:999px}
-    .badge.approved{background:#09291a;color:#4ae39b;border:1px solid #153a27}
-    .badge.pending{background:#2a1e05;color:#ffcc6b;border:1px solid #3e2b08}
-    .progress{width:100%;height:6px;background:#111a33;border-radius:999px;overflow:hidden;margin:8px 0 4px;border:1px solid #1e2b50}
+    .badge.approved{background:#eafff2;color:#0a6b3c;border:1px solid #b7f0cf}
+    .badge.pending{background:#fff6e6;color:#a15a00;border:1px solid #f3d6a3}
+    .progress{width:100%;height:6px;background:#f1f5f9;border-radius:999px;overflow:hidden;margin:8px 0 4px;border:1px solid var(--line)}
     .progress i{display:block;height:100%;background:linear-gradient(90deg,#4f7fff,#6bd3ff);width:0%}
     .tools{display:flex;justify-content:center;margin-top:14px}
-    .empty{padding:24px;text-align:center;border:1px dashed #344065;border-radius:14px;background:#0b1224;color:#9aa8c7}
+    .empty{padding:24px;text-align:center;border:1px dashed #cbd5e1;border-radius:14px;background:#fff;color:#64748b}
 
-    footer{border-top:1px solid #111a33;margin-top:20px}
-    .footer-inner{display:flex;justify-content:space-between;align-items:center;padding:16px 0;color:#7f8fb3;font-size:13px}
+    footer{border-top:1px solid var(--line);margin-top:20px;background:#fff}
+    .footer-inner{display:flex;justify-content:space-between;align-items:center;padding:16px 0;color:#64748b;font-size:13px}
     .footer-nav{display:flex;gap:10px}
   </style>
 </head>
@@ -50,7 +50,7 @@
     <div class="container inner">
       <a class="brand" href="index.html">Project.PAW</a>
       <nav class="nav">
-        <a href="index.html" class="btn ghost">홈</a>
+        <a href="index.html" class="btn">홈</a>
         <a href="create.html" class="btn primary">등록하기</a>
       </nav>
     </div>
@@ -76,7 +76,7 @@
       </div>
 
       <div id="list" class="grid" style="margin-top:12px"></div>
-      <div class="tools"><button id="moreBtn" class="btn ghost">더 보기</button></div>
+      <div class="tools"><button id="moreBtn" class="btn">더 보기</button></div>
     </section>
   </main>
 
@@ -101,7 +101,7 @@
     const moreBtn = document.querySelector("#moreBtn");
 
     let all = []; let page = 0;
-    const PAGE_SIZE = 12; // 컴팩트하게 더 많이
+    const PAGE_SIZE = 12;
 
     const createdAtSeconds = x => (x && typeof x==='object' && 'seconds' in x) ? x.seconds : 0;
 
