--- a/project.html
+++ b/project.html
@@ -5,48 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>프로젝트 상세 — Project.PAW</title>
   <style>
-    :root{--primary:#1f6feb;--muted:#9aa8c7;--bg:#0a0f1d;--card:#0f1629;--line:#1a2342;--radius:16px}
-    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:#e6ecff;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
+    :root{--primary:#1f6feb;--muted:#64748b;--bg:#f8fafc;--card:#ffffff;--line:#e5e7eb;--radius:16px}
+    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:#0f172a;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
     a{text-decoration:none;color:inherit}
     .container{max-width:1100px;margin:0 auto;padding:0 14px}
-    .topbar{position:sticky;top:0;z-index:10;background:#0b1222;border-bottom:1px solid var(--line)}
+    .topbar{position:sticky;top:0;z-index:10;background:#ffffffcc;border-bottom:1px solid var(--line);backdrop-filter:blur(6px)}
     .topbar .inner{display:flex;align-items:center;justify-content:space-between;padding:10px 14px}
     .brand{font-weight:900}.nav{display:flex;gap:8px}
-    .btn{appearance:none;border:0;border-radius:10px;padding:9px 12px;font-weight:700;cursor:pointer}
-    .btn.primary{background:var(--primary);color:#fff}.btn.ghost{background:#ffffff12}.btn.disabled{opacity:.5;pointer-events:none}
+    .btn{appearance:none;border:1px solid var(--line);border-radius:10px;padding:9px 12px;font-weight:700;cursor:pointer;background:#fff}
+    .btn.primary{background:var(--primary);color:#fff;border-color:transparent}.btn.disabled{opacity:.5;pointer-events:none}
 
     .layout{display:grid;grid-template-columns:1.1fr .9fr;gap:14px;padding:18px 0}
     @media(max-width:900px){.layout{grid-template-columns:1fr}}
-    .card{background:linear-gradient(180deg,#0f1629,#0d1527);border:1px solid #1b2547;border-radius:16px}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:16px}
     .pad{padding:12px}
 
-    /* Cover: 높이 320px로 축소 */
-    .cover img{width:100%;height:320px;object-fit:cover;border-top-left-radius:16px;border-top-right-radius:16px;background:#0a1020}
+    /* Cover: 320px (밝은 톤) */
+    .cover img{width:100%;height:320px;object-fit:cover;border-top-left-radius:16px;border-top-right-radius:16px;background:#eef2ff}
     @media(max-width:640px){.cover img{height:220px}}
 
     h1{margin:0 0 6px 0;font-size:clamp(20px,3.2vw,26px);font-weight:900}
     .muted{color:var(--muted)}
-    .kicker{font-size:11px;letter-spacing:.12em;text-transform:uppercase;color:#90a0c0;font-weight:800;margin-bottom:6px}
-    .progress{width:100%;height:6px;background:#111a33;border-radius:999px;overflow:hidden;margin:8px 0 4px;border:1px solid #1e2b50}
+    .kicker{font-size:11px;letter-spacing:.12em;text-transform:uppercase;color:#475569;font-weight:800;margin-bottom:6px}
+    .progress{width:100%;height:6px;background:#f1f5f9;border-radius:999px;overflow:hidden;margin:8px 0 4px;border:1px solid var(--line)}
     .progress i{display:block;height:100%;background:linear-gradient(90deg,#4f7fff,#6bd3ff);width:0%}
-    .chip{display:inline-block;font-size:11px;padding:3px 7px;border-radius:999px;background:#2a1e05;color:#ffcc6b;border:1px solid #3e2b08}
-    .chip.approved{background:#09291a;color:#4ae39b;border:1px solid #153a27}
+    .chip{display:inline-block;font-size:11px;padding:3px 7px;border-radius:999px;background:#fff6e6;color:#a15a00;border:1px solid #f3d6a3}
+    .chip.approved{background:#eafff2;color:#0a6b3c;border:1px solid #b7f0cf}
 
-    /* Gallery: 240px로 축소 */
+    /* Gallery: 240px */
     .slider{position:relative}
     .track{display:flex;transition:transform .25s ease}
     .slide{min-width:100%}
-    .slide img{width:100%;height:240px;object-fit:cover;border-radius:10px}
+    .slide img{width:100%;height:240px;object-fit:cover;border-radius:10px;background:#eef2ff}
     @media(max-width:640px){.slide img{height:200px}}
-    .navbtn{position:absolute;top:50%;transform:translateY(-50%);border:0;background:#0f1629;border-radius:999px;width:32px;height:32px;box-shadow:0 8px 20px rgba(0,0,0,.25);cursor:pointer}
+    .navbtn{position:absolute;top:50%;transform:translateY(-50%);border:1px solid var(--line);background:#fff;border-radius:999px;width:32px;height:32px;box-shadow:0 8px 20px rgba(2,6,23,.06);cursor:pointer}
     .navbtn.prev{left:6px}.navbtn.next{right:6px}
 
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(120px,1fr));gap:8px}
-    .img-cell{border-radius:10px;overflow:hidden;border:1px solid #1b2547;background:#0f1629}
-    .img-cell img{width:100%;height:120px;object-fit:cover;display:block}
+    .img-cell{border-radius:10px;overflow:hidden;border:1px solid var(--line);background:#fff}
+    .img-cell img{width:100%;height:120px;object-fit:cover;display:block;background:#eef2ff}
 
-    footer{border-top:1px solid #111a33;margin-top:18px}
-    .footer-inner{display:flex;justify-content:space-between;align-items:center;padding:14px 0;color:#7f8fb3;font-size:13px}
+    footer{border-top:1px solid var(--line);margin-top:18px;background:#fff}
+    .footer-inner{display:flex;justify-content:space-between;align-items:center;padding:14px 0;color:#64748b;font-size:13px}
     .footer-nav{display:flex;gap:10px}
   </style>
 </head>
@@ -55,7 +55,7 @@
     <div class="container inner">
       <a class="brand" href="index.html">Project.PAW</a>
       <nav class="nav">
-        <a href="project_list.html" class="btn ghost">후원하기</a>
+        <a href="project_list.html" class="btn">후원하기</a>
         <a href="create.html" class="btn primary">등록하기</a>
       </nav>
     </div>
@@ -102,7 +102,7 @@
           <div class="kicker">연결</div>
           <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:6px">
             <a class="btn primary" id="kakaoBtn" target="_blank" rel="noopener">카카오톡 연결</a>
-            <button class="btn ghost" id="shareBtn">공유</button>
+            <button class="btn" id="shareBtn">공유</button>
           </div>
           <p class="muted" id="kakaoNotice" style="margin-top:6px;display:none;font-size:13px">
             관리자 승인 후 카카오 오픈채팅 링크가 공개됩니다.
